Fix gradient on About page for dark mode

--- a/components/AboutPage/index.scss
+++ b/components/AboutPage/index.scss
@@ -16,20 +16,7 @@
       right: -18vw;
       top: $unit-4x * -1;
       z-index: 1;
-      background-image: linear-gradient(
-          90deg,
-          rgba(245, 245, 245, 1) 5%,
-          rgba(245, 245, 245, 0.2) 50%,
-          rgba(245, 245, 245, 0.2) 70%,
-          rgba(245, 245, 245, 1) 95%
-        ),
-        linear-gradient(
-          rgba(245, 245, 245, 1) 5%,
-          rgba(245, 245, 245, 0.4) 40%,
-          rgba(245, 245, 245, 0.4) 78%,
-          rgba(245, 245, 245, 1) 95%
-        ),
-        url('/images/about-hero.jpg');
+      background-image: var(--hero-gradient), url('/images/about-hero.jpg');
 
       @include breakpoint(tablet) {
         right: -14vw;
@@ -47,19 +34,7 @@
           left: 0;
           right: 0;
           bottom: 0;
-          background: linear-gradient(
-              90deg,
-              rgba(245, 245, 245, 1) 0%,
-              rgba(245, 245, 245, 0) 50%,
-              rgba(245, 245, 245, 0) 70%,
-              rgba(245, 245, 245, 1) 95%
-            ),
-            linear-gradient(
-              rgba(245, 245, 245, 1) 0%,
-              rgba(245, 245, 245, 0) 40%,
-              rgba(245, 245, 245, 0) 78%,
-              rgba(245, 245, 245, 1) 95%
-            );
+          background: var(--hero-gradient-overlay);
           z-index: 3;
         }
       }
